[gd_scene load_steps=9 format=3 uid="uid://cwxm3u8h2psf7"]

[ext_resource type="Script" uid="uid://d3ofnnbdibplh" path="res://scrips/level_2.gd" id="1_y5pcy"]
[ext_resource type="PackedScene" uid="uid://dkplcuh8n5hsy" path="res://scenes/parallax_background2.tscn" id="2_vqcq2"]
[ext_resource type="PackedScene" uid="uid://bb0mx2jphpogr" path="res://scenes/level2/floor.tscn" id="3_vqcq2"]
[ext_resource type="PackedScene" uid="uid://07woifrvx6d8" path="res://scenes/level1/player.tscn" id="4_27jnd"]
[ext_resource type="Script" uid="uid://dwmbrwiepsjq2" path="res://scrips/player2.gd" id="5_4700a"]
[ext_resource type="PackedScene" uid="uid://da0x673ji1mcy" path="res://scenes/level1/hud1.tscn" id="5_ujyg4"]
[ext_resource type="PackedScene" uid="uid://bomp2dmjwk65l" path="res://scenes/level1/game_over.tscn" id="6_mqis8"]
[ext_resource type="PackedScene" uid="uid://bi0p4d2r3t8ab" path="res://scenes/level1/ai_npc.tscn" id="8_vqcq2"]

[node name="Level2" type="Node"]
script = ExtResource("1_y5pcy")

[node name="ParallaxBackground2" parent="." instance=ExtResource("2_vqcq2")]

[node name="floor2" parent="." instance=ExtResource("3_vqcq2")]

[node name="player2" parent="." instance=ExtResource("4_27jnd")]
position = Vector2(66.0001, 399)
script = ExtResource("5_4700a")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)

[node name="HUD2" parent="." instance=ExtResource("5_ujyg4")]

[node name="GameOver" parent="." instance=ExtResource("6_mqis8")]

[node name="AI_HUD" parent="." instance=ExtResource("8_vqcq2")]
